2009-08-28 Andreas Fink <andreas at fink.org>
    * util/start-stop-daemon.c: fix compilation under MacOS X 10.6

2009-08-28 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c: always initialize msgdata because too many parts in
      kannel expect msgdata non NULL.

2009-08-24 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.c: fixed timeout value passed to select. This should fix #514.

2009-08-12 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.[ch]: changes as follows:
      - changed at2_read_line to first try buffer and only then try to read from device.
        This should give us some speedup.
      - populate timeout to select. This fixes to high CPU usage.
      - more error handling.
      - variuos fixes.

2009-08-07 Alexander Malysh <amalysh at kannel.org>
    * gw/dlr_oracle.c: fixed table name in dlr_flush_oracle.

2009-07-28 Alexander Malysh <amalysh at kannel.org>
    * gw/numhash.[ch]: increase numhash precision from 9,18 to 19,38 on 32,64bit respectively.
      This is possible by using C99 standard type long long.

2009-07-21  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_smpp.c: fix compile error for --disable-ssl builds. NLC.
      Thanks to Gottfried Huber <gottfried.huber at siemens.com> for reporting.

2009-07-08 Alejandro Guerrieri <aguerrieri at kannel.org>
    * gw/bb_smscconn.c: fixed warnings on unused variables

2009-07-08 Alejandro Guerrieri <aguerrieri at kannel.org>
    * doc/userguide/userguide.xml, gw/bearerbox.c, gw/bearerbox.h, gw/bb_smscconn.c,
      gw/bb_http.c: improvements and bug fixes for the http admin interface:
      - added add-smsc and remove-smsc commands to dinamically add and remove smsc
        without restarting bearerbox
      - start-smsc reloads the configuration from disk
      - fixes bug on stop-smsc and start-smsc to properly report an error when a
	non-existing smsc name is stopped/started