@@ -1,3 +1,8 @@
+2009-08-31 Alejandro Guerrieri <aguerrieri at kannel.org>
+    * gw/bb_smscconn.c, gw/bearerbox.c, gw/bearerbox.h,
+      doc/userguide/userguide.xml: limit of 1M messages on outgoing queue limit
+      documented. Small code cleanup.
+
 2009-08-28 Andreas Fink <andreas at fink.org>
     * util/start-stop-daemon.c: fix compilation under MacOS X 10.6
 
